samples/_failures_safe/1761258959_216e61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a6a33b7.c: In function ‘main’:
./samples/SAFE/__tmp_2a6a33b7.c:159:10: error: ‘EVENT_DATA’ undeclared (first use in this function)
  159 |         {EVENT_DATA
      |          ^~~~~~~~~~
./samples/SAFE/__tmp_2a6a33b7.c:159:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2a6a33b7.c:160: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_2a6a33b7.c:159:9: note: to match this ‘{’
  159 |         {EVENT_DATA
      |         ^
./samples/SAFE/__tmp_2a6a33b7.c:159:9: error: expected declaration or statement at end of input
